# ros_social_robot_prototype

./: .gitignore  README.md
docs/: README.md
docs/diagrammen/current_versions/Camera_component/: Component_Diagram_camera_lld_hld_overview.puml
docs/diagrammen/current_versions/Component_diagram/: Component_diagramv3.puml
docs/diagrammen/current_versions/Controller_component/: Class_Diagram_controller.puml  Component_Diagram_controller.puml  Sequence_Diagram_camera_input_trigger.puml  Sequence_Diagram_radar_input_trigger.puml
docs/diagrammen/current_versions/Deployment_diagram/: Deployment_diagramv4.puml
docs/diagrammen/current_versions/Eye_display_component/: Component_Diagram_eye_display_lld_hld_overview.puml
docs/diagrammen/current_versions/Radar_component/: Component_Diagram_radar_lld_hld_overview_v2.puml
docs/diagrammen/old_versions/Component_diagram/: Component_diagramv1.puml  Component_diagramv2.puml
micro_ros_agent/: README.md
micro_ros_platform_io_ws/: .gitignore  REAMDE.md  config_example.ini  platformio.ini
micro_ros_platform_io_ws/src/: micro_ros_node.hpp  parser.py  presence_sensing.cpp  presence_sensing_new.cpp  presence_sensing_old.cpp  publisher.cpp  test.cpp
micro_ros_platform_io_ws/src/ld2410_node/: cleaning_does_not_make_sense.txt  cleaning_does_not_make_sensev2.txt  config.ini  ld2410_radar.cpp  ld2410_radar.hpp  load_config.py  presence_sensing.cpp  radar_ld2410_manager.hpp  radar_ld2410_manager.tpp  rgb_led.cpp  rgb_led.hpp  uartconfig.hpp  wificonfig.hpp
proof_of_concepts/: README.md
proof_of_concepts/eye_ui_with_electron/: README.md  client-controller.js  control-panel.html  index.html  main.js  package-lock.json  package.json  renderer.js  styles.css  styles.css.map  styles.scss  test-server.js  test-states-server.js
proof_of_concepts/eye_ui_with_electron_old/: README.md  index.html  package-lock.json  package.json
proof_of_concepts/eye_ui_with_electron_symposium_demo/: README.md  configure_screens.sh  control-panel.html  main.js  package-lock.json  package.json  renderer.js  styles.css
proof_of_concepts/eye_ui_with_python/: README.md  eyev1.py  eyev2.py
proof_of_concepts/proof_of_concept_micro_ros/: README.md
ros2_ws/: README.md
ros2_ws/src/audio_hld/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/audio_hld/action/: PlaySound.action
ros2_ws/src/audio_hld/include/audio_hld/: audio_manager_node.hpp  sound_command_mapping.hpp
ros2_ws/src/audio_hld/launch/: audio_launch.py
ros2_ws/src/audio_hld/msg/: PlaySoundResult.msg  SoundCommand.msg
ros2_ws/src/audio_hld/src/: audio_manager_node.cpp  main.cpp
ros2_ws/src/audio_hld/srv/: SoundRequest.srv
ros2_ws/src/audio_lld/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/audio_lld/include/audio_lld/: audio_file_player_node.hpp  speaker.hpp
ros2_ws/src/audio_lld/src/: audio_file_player_node.cpp  audio_lld_node.cpp  main.cpp  speaker.cpp
ros2_ws/src/audio_lld/srv/: PlayAudioFile.srv
ros2_ws/src/camera/: CMakeLists.txt  Todo.txt  package.xml
ros2_ws/src/camera/include/camera/: camera_hld.hpp  camera_lld.hpp
ros2_ws/src/camera/launch/: camera_launch.py
ros2_ws/src/camera/msg/: FaceInfo.msg
ros2_ws/src/camera/src/: camera_hld.cpp  camera_lld.cpp
ros2_ws/src/camera_hld/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/camera_hld/include/camera_hld/: camera_hld.hpp
ros2_ws/src/camera_hld/launch/: camera_launch.py
ros2_ws/src/camera_hld/src/: camera_hld.cpp  main.cpp
ros2_ws/src/camera_hld/test/: test_camera_hld.cpp
ros2_ws/src/camera_lld/: CMakeLists.txt  package.xml
ros2_ws/src/camera_lld/include/camera_lld/: camera_lld.hpp
ros2_ws/src/camera_lld/src/: camera_lld.cpp  main.cpp
ros2_ws/src/custom_action_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/custom_action_cpp/src/: fibonacci_action_server.cpp
ros2_ws/src/custom_action_interfaces/: package.xml
ros2_ws/src/eye_display_hld/: CMakeLists.txt  package.xml
ros2_ws/src/eye_display_hld/include/eye_display_hld/: eye_display_hld.hpp
ros2_ws/src/eye_display_hld/msg/: EyeControl.msg  ScreenExpression.msg
ros2_ws/src/eye_display_hld/src/: eye_display_hld.cpp  eye_display_hld_old.cpp  main.cpp
ros2_ws/src/eye_display_lld/: CMakeLists.txt  README.md  package-lock.json  package.xml
ros2_ws/src/eye_display_lld/launch/: electron_launch.py
ros2_ws/src/eye_display_lld/msg/: EyeLidControl.msg  EyesDirection.msg  PupilControl.msg
ros2_ws/src/eye_display_lld/src/: README.md  dev-launch.sh  index.html  main.js  package-lock.json  package.json  renderer.js  styles.css  styles.css.map  styles.scss  styles_no_glass.scss  styles_with_glass.scss
ros2_ws/src/eyes_hld/: CMakeLists.txt  package.xml
ros2_ws/src/interaction_controller/: CMakeLists.txt  package.xml
ros2_ws/src/interaction_controller/include/interaction_controller/: interaction_controller.hpp
ros2_ws/src/interaction_controller/launch/: interaction_controller_launch.py
ros2_ws/src/interaction_controller/msg/: PresenceDetection.msg
ros2_ws/src/interaction_controller/src/: interaction_controller.cpp  main.cpp
ros2_ws/src/ld2410_interface/: CMakeLists.txt  package.xml
ros2_ws/src/ld2410_interface/msg/: LD2410TargetDataFrame.msg  LD2410TargetDataFrameArray.msg
ros2_ws/src/microROS_pub_sub_led_control/: platformio.ini
ros2_ws/src/radar_presence_hld/: CMakeLists.txt  package.xml
ros2_ws/src/radar_presence_hld/include/radar_presence_hld/: radar_presence_hld.hpp
ros2_ws/src/radar_presence_hld/src/: main.cpp  radar_presence_hld.cpp
scripts/: README.md
scripts/camera_calibration/: README.md  calibration_a4v1.py  calibration_a4v2.py  pixel_to_unit.py
scripts/robot_start_up/: README.md  install.sh  install_network.sh  uninstall.sh  uninstall_network.sh
scripts/robot_start_up/scripts/: rotate_screens.sh  start_hotspot.sh  start_ssh.sh  stop.sh  stop_hotspot.sh  stop_ssh.sh
scripts/robot_start_up/services/: robot-display.service  robot-eye.service  robot-hotspot.service  robot-interaction-controller.service  robot-launch-eye.service  robot-micro-ros-agent.service  robot-ssh-init.service
(+59 files in other folders)
