<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>audio_hld</name>
  <version>0.1.0</version>
  <description>High-Level Driver for predefined sounds</description>
  <maintainer email="a.tunc1@student.han.nl">hcl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <!-- <depend>std_srvs</depend> -->
  <depend>std_msgs</depend>
  <depend>audio_lld</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>