<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eye_display_lld</name>
  <version>0.0.0</version>
  <description>An Electron app integrated with ROS 2 Jazzy for eyes low level driver</description>
  <maintainer email="a.tunc1@student.han.nl">hcl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <exec_depend>rclnodejs</exec_depend> -->
<!-- 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export> -->
</package>
